Upgraded vibe-d to 0.10.3, added Docker packaging and Makefile.

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ __dummy.html
 *.o
 *.obj
 *.sublime-project
+/cppformat
 /*.exe
 /*.sublime-workspace
 /source/sftp-config.json
 sftp-config.json
+Makefile.local
+*.tar.gz
